; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4proc.c_nfsd4_exchange_id_rsize.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4proc.c_nfsd4_exchange_id_rsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_rqst = type { i32 }
%struct.nfsd4_op = type { i32 }

@op_encode_hdr_size = common dso_local global i32 0, align 4
@NFS4_OPAQUE_LIMIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.svc_rqst*, %struct.nfsd4_op*)* @nfsd4_exchange_id_rsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfsd4_exchange_id_rsize(%struct.svc_rqst* %0, %struct.nfsd4_op* %1) #0 {
  %3 = alloca %struct.svc_rqst*, align 8
  %4 = alloca %struct.nfsd4_op*, align 8
  store %struct.svc_rqst* %0, %struct.svc_rqst** %3, align 8
  store %struct.nfsd4_op* %1, %struct.nfsd4_op** %4, align 8
  %5 = load i32, i32* @op_encode_hdr_size, align 4
  %6 = add nsw i32 %5, 2
  %7 = add nsw i32 %6, 1
  %8 = add nsw i32 %7, 1
  %9 = add nsw i32 %8, 1
  %10 = add nsw i32 %9, 4
  %11 = add nsw i32 %10, 2
  %12 = load i32, i32* @NFS4_OPAQUE_LIMIT, align 4
  %13 = call i32 @XDR_QUADLEN(i32 %12)
  %14 = add nsw i32 %11, %13
  %15 = add nsw i32 %14, 1
  %16 = load i32, i32* @NFS4_OPAQUE_LIMIT, align 4
  %17 = call i32 @XDR_QUADLEN(i32 %16)
  %18 = add nsw i32 %15, %17
  %19 = add nsw i32 %18, 1
  %20 = add nsw i32 %19, 1
  %21 = add nsw i32 %20, 0
  %22 = sext i32 %21 to i64
  %23 = mul i64 %22, 4
  %24 = trunc i64 %23 to i32
  ret i32 %24
}

declare dso_local i32 @XDR_QUADLEN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
